Fix dark mode in "The White Castle", "Can't stop" and "Pyramido" + modification of news feed messages filtering feature

--- a/src/css/dark_theme/chat.css
+++ b/src/css/dark_theme/chat.css
@@ -1,6 +1,7 @@
 body.desktop_version #chatbar .chatwindowcollapsed {
   background: var(--dark-10);
   color: var(--light-80);
+  border-color: var(--light-50);
 }
 
 body.mobile_version #chatbar .chatwindowcollapsed {
